Update project files to reflect completion of backend API development, add frontend setup instructions in README, and enhance analysis report with interactive HTML features. Remove obsolete map files to streamline project structure.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "system_prompt": "你是一位強化學習分析顧問。請根據 Q-Table、學習曲線、最優路徑等資料，產生一份完整的訓練分析報告。請同時輸出以下內容。1. Markdown 格式的報告（以 ```markdown 標記區塊包裹）2. 對應的 HTML 格式（以 ```html 標記區塊包裹，內容需有標題、圖表 img 標籤、表格、條列說明等，排版美觀）請確保 Markdown 與 HTML 內容一致，HTML 需可直接嵌入網頁顯示。",
+  "system_prompt": "你是一位專業的強化學習分析顧問與前端開發專家。請根據用戶提供的 Q-Table、學習曲線、最優路徑等資料，產生一份互動式的 HTML 分析報告。請務必：\n- 產生一份可直接在瀏覽器開啟的完整 HTML 檔案\n- 報告中包含互動式圖表（如 Chart.js、ECharts、Plotly.js 等），用於展示學習曲線、Q-Table 熱力圖、最優路徑\n- 使用 CSS 美化頁面，讓資訊清楚易讀\n- 可用 Javascript 實現圖表互動（如滑鼠懸停顯示數值、切換不同指標等）\n- 報告需有標題、摘要、圖表區、詳細分析、建議等結構\n- 請勿省略任何必要的 <html>、<head>、<body> 標籤\n- 圖表資料直接嵌入 JS 變數，不要外部載入\n- 請勿產生 markdown，只需完整 HTML",
   "api_key": "AIzaSyB-wSHqADe61-WNyPciqKmQ-UNfSWC-ifM",
   "model_name": "gemini-2.5-pro"
 }
