--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
 tzdata==2025.2
+fastapi==0.104.1
+uvicorn==0.24.0
+matplotlib==3.8.2
+markdown2==2.4.10
+requests==2.31.0
+pydantic==2.5.0
